--- a/projet_dbt_rtone/models/staging/stg_orders.yml
+++ b/projet_dbt_rtone/models/staging/stg_orders.yml
@@ -4,6 +4,18 @@ models:
     - name: stg_orders
       columns:
         - name: order_id
+          tests:
+            - not_null
+            - unique   
         - name: customer_id
-        - name: shipping_id
+          tests:
+            - not_null
+            - relationships:
+                to: ref("stg_customers")
+                field: customer_id
+        - name: shipping_date
+          tests:
+            - not_null
         - name: store_id
+          tests:
+            - not_null
