--- a/projet_dbt_rtone/models/staging/sources.yml
+++ b/projet_dbt_rtone/models/staging/sources.yml
@@ -3,7 +3,9 @@ version: 2
 sources:
     - name: my_dbt_db
       schema: my_dbt_db
+      description: E-commerce data for the Jaffle Shop
 
       tables:
         - name: raw_customers
+          description: One record per person who has purchased one or more items
         - name: raw_orders
